--- a/app/views/stores/new.html.haml
+++ b/app/views/stores/new.html.haml
@@ -1,6 +1,6 @@
 - provide(:title, "Create a Store")
 .content
-  = render "shared/store_admin_sidebar"
+  = render "shared/sidebar"
   .mainbar
     .page-head
       %h2.pull-left
