Initial cart item checking

--- a/app/views/stores/inventory/_cart_row.html.haml
+++ b/app/views/stores/inventory/_cart_row.html.haml
@@ -1,4 +1,4 @@
-%tr
+%tr{:class => (item.modified ? 'error' : '')}
   %td
     = link_to catalog_part_url(item.catalog_object, :subdomain => ""), :rel => 'popover', :class => 'part-preview', :"data-content" => "#{image_tag item.image(:medium).html_safe}" do
       = image_tag item.image
