check cart item availability - todo: display when an item has been removed

--- a/app/views/stores/cart.html.haml
+++ b/app/views/stores/cart.html.haml
@@ -20,7 +20,7 @@
               .widget-content
                 %table.table.table-hover
                   %tbody
-                    - @cart_items.each do |item|
+                    - @cart.cart_items.each do |item|
                       = render "stores/inventory/cart_row", :item => item
               .widget-foot
                 %h6.pull-left
