--- a/app/views/shared/_main_menu.html.haml
+++ b/app/views/shared/_main_menu.html.haml
@@ -35,6 +35,10 @@
                     %i.icon-user
                     Edit Settings
                 %li
+                  = link_to carts_path do
+                    %i.icon-shopping-cart
+                    My Open Carts
+                %li
                   = link_to wishlists_path do
                     %i.icon-list
                     My Wishlists
