BUGFIX: Scope wishlist setup

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -675,7 +675,7 @@ form label{
 .sidebar-right .navi > li.open > a {
   border-top: 1px solid #fff;
   border-bottom:none;
-  color: #fff;
+  color: #222 !important;
 }
 
 .sidebar-footer .navi > li > a {
