--- a/app/views/carts/index.html.haml
+++ b/app/views/carts/index.html.haml
@@ -27,7 +27,7 @@
                         %th Store
                         %th Unique Items in Cart
                         %th Total Items in Cart
-                        %th Cost
+                        %th Total Cost
                         %th &nbsp;
                     %tbody
                       - @carts.each do |cart|
