--- a/app/views/payment_processor/new.html.haml
+++ b/app/views/payment_processor/new.html.haml
@@ -22,7 +22,7 @@
             .widget-content.padd
               %p
                 = @store.name
-                = @response
+                = @response.body
 
   .clearfix
   = render 'shared/footer'
