--- a/app/views/checkout/new.html.haml
+++ b/app/views/checkout/new.html.haml
@@ -13,7 +13,7 @@
         .row-fluid
           .span12
             .box
-              %form#payment-form.form-horizontal{action: "#{checkout_index_path}", method: "POST"}
+              %form#payment-form.form-horizontal{action: "#{checkout_index_url(:subdomain => nil, :protocol => 'https')}", method: "POST"}
                 .box-content
                   #MyWizard.wizard
                     %ul.steps
