--- a/app/views/checkout/new.html.haml
+++ b/app/views/checkout/new.html.haml
@@ -116,7 +116,7 @@
   = render 'shared/footer'
 - content_for :script do
   :javascript
-    Stripe.setPublishableKey("#{Rails.configuration.stripe[:publishable_key]}");
+    Stripe.setPublishableKey("#{@publishable_key}");
 
     function stripeResponseHandler(status, response) {
       var $form = $('#payment-form');
