--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
     %title= full_title(yield(:title))
     = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
     = csrf_meta_tags
+    = analytics_init if Rails.env.production?
     <!--[if lt IE 9]>
     %script{:src => "/js/html5shim.js"}
     <![endif]-->
