Store sidebar fix

--- a/app/views/orders/index.html.haml
+++ b/app/views/orders/index.html.haml
@@ -1,7 +1,7 @@
 - provide(:title, "Orders")
 .content
   - if @store.present?
-    = render "stores/shared/store_sidebar"
+    = render "shared/store_sidebar"
   - else
     = render "shared/sidebar"
   .mainbar
