--- a/app/views/stores/cart.html.haml
+++ b/app/views/stores/cart.html.haml
@@ -26,7 +26,7 @@
                 %h6.pull-left
                   Unique Items: #{@cart.total_unique_items} | Total Items: #{@cart.total_items}
                 %h4.pull-right
-                  Total: $#{number_with_precision @cart.total_cost, :precision => 2}
+                  Total: #{humanized_money_with_symbol(@cart.total_cost, no_cents_if_whole: false)}
                 .clearfix
               .widget-foot
                 = link_to store_inventory_path(@store, :all) , :class => "btn pull-left" do
