--- a/app/views/shared/_store_sidebar.html.haml
+++ b/app/views/shared/_store_sidebar.html.haml
@@ -25,4 +25,5 @@
           %li= link_to "All Sets", store_inventory_path(@store, :sets)
           - if user_signed_in?
             %li= link_to "On My Wishlist", store_wishlist_path(@store, @wishlist, 'all')
+            %li= link_to "My Orders", store_orders_path(@store)
       = render "stores/shared/sidebar_inventory", :store => @store
