Permissions for pages

--- a/app/views/shared/_store_sidebar.html.haml
+++ b/app/views/shared/_store_sidebar.html.haml
@@ -8,7 +8,7 @@
             %button.btn.btn-info
               %i.icon-angle-right
     %ul.navi
-      %li.has_submenu.nlightblue.open
+      %li.nlightblue.open
         = link_to root_url(:subdomain => @store.alias) do
           %i.icon-home
           Store Home
