--- a/app/views/stores/shared/_store_info.html.haml
+++ b/app/views/stores/shared/_store_info.html.haml
@@ -2,11 +2,19 @@
   .widget.wlightblue
     .widget-head
       .pull-left
-        About
         = store.name
+        Resources
       .clearfix
     .widget-content
-      %ul.project
-        %li
-          = link_to "Link", root_url
+      .sidebar.sidebar-right
+        - if @store.pages.present?
+          %ul.navi
+            - @store.pages.each do |page|
+              %li.ngrey
+                = link_to page_url(page.slug, :subdomain => @store.alias) do
+                  = page.title
+                  %span.pull-right
+                    %i.icon-angle-right
+    .widget-foot
+      .clearfix
 
