--- a/app/views/shared/_store_admin_sidebar.html.haml
+++ b/app/views/shared/_store_admin_sidebar.html.haml
@@ -17,7 +17,7 @@
         %ul
           %li= link_to "View My Store", root_url(:subdomain => @store.alias)
           %li= link_to "Settings", edit_store_path(@store)
-          %li= link_to "Shipping Options", edit_store_path(@store)
+          %li= link_to "Shipping Options", store_shipping_options_path(@store)
           %li= link_to "Payment Processor", stripe_setup_url(:subdomain => nil)
           %li= link_to "Store Pages", pages_url(:subdomain => @store.alias)
       %li.has_submenu.nred
